--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -92,6 +92,12 @@
 
     /*Discover*/
 
+    .discover-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        
+      }
+
     
     }
     
