--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -174,6 +174,9 @@
   
 }
 
+.header-overlay:hover .overlay{
+  opacity: 0;
+}
 
 /*******************************************************************/
   footer{
