--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -86,7 +86,7 @@
   }
   .logo img {
       object-fit: contain;
-      margin-right: 50px;
+      margin-right: 5px;
   }
   .logotext{
     color: rgb(13, 67, 115);
@@ -140,7 +140,7 @@
   object-fit: cover;
 }
 .hero{
-  margin-top: 50px auto;
+  
   margin-bottom: 15px;
   position: relative;
   border: 1px solid rgba(0,0,0,.75);
@@ -346,7 +346,7 @@
   transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
   width: 400%;
   line-height: 1.2;
-  height: 400px;
+  height: 500px;
 }
 .slide-content{
   display: grid;
@@ -356,18 +356,23 @@
   display: flex;
   flex-direction: column;
   color: white;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  text-align: left;
+  padding: 15px;
+  text-align: center;
+  
+  align-items: center;
   
 
    
 }
 .slide-details h1 {
   
-  font-size: 2.5rem;
-  margin-top: 5rem;
+  font-size: 2rem;
+  margin-top: 150px;
 }
+
+
+
+
 .slide-details a {
   
   text-decoration: none;
@@ -392,7 +397,8 @@
   width: 100%;
   height: 100%;
   object-fit: scale-down;
-  padding: 20px;
+  
+  
 }
 #slides .slide {
   width: 25%;
