--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -146,7 +146,15 @@
   }
   #slides .inner{
     height: 800px;
+    
   }
+  .slide-details a{
+    margin: 10px;
+  }
+  .slide-details{
+    width: 100%;
+  }
+  
   .slide-content{
     display: flex;
     flex-direction: column;
