--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -65,9 +65,13 @@
   font-size: 1.5rem;
   margin-top: 4rem;
 }
+s
 
    #slides{
     z-index: 0;
+   }
+   .spotlight1 h1, .spotlight2 h1,.spotlight3 h1{
+    font-size: 1.2rem;
    }
    #check:checked ~ul{
     left: 0;
