--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -85,7 +85,7 @@
           
   }
   .logo img {
-      object-fit: contain;
+      object-fit: cover;
       margin-right: 5px;
   }
   .logotext{
@@ -143,7 +143,7 @@
   
   margin-bottom: 15px;
   position: relative;
-  border: 1px solid rgba(0,0,0,.75);
+  
 
 }
 .herolabel{
@@ -324,7 +324,7 @@
   border: 3px solid #ccc;
   background: #fff;
   position: relative;
-  z-index: 1;
+   z-index: 1;
 }
 #overflow {
   width: 100%;
@@ -396,7 +396,7 @@
 .slide-content img {
   width: 100%;
   height: 100%;
-  object-fit: scale-down;
+  object-fit: cover;
   
   
 }
@@ -517,7 +517,7 @@
 
 .spotlight1 img, .spotlight2 img, .spotlight3 img{
   width: 100%;
-  object-fit: scale-down;
+  object-fit: cover;
 }
  
 
@@ -525,24 +525,24 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   padding: 0.5rem;
   gap: 1rem;
  }
  .spotlight1 p{
-  line-height: 20px;
-  margin-bottom: 1rem;
+  line-height: 15px;
+  margin-bottom: 0.1rem;
  }
  .spotlight2 p{
   line-height: 20px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.1rem;
  }
  .spotlight2 a{
   border-bottom: 1rem;
  }
  .spotlight3 p{
   line-height: 20px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.1rem;
  }
 /*/////////////////////////////// ////////////*/
 
@@ -720,6 +720,7 @@ hr{
 .xela-history img, .xela-map img ,.xela-flag-seal img,.main-content img{
   width: 100%;
   height: auto;
+  object-fit: cover;
   border-radius: 5px;
   padding-bottom: 10px;
   opacity: 0;
