--- a/styles/larger.css
+++ b/styles/larger.css
@@ -30,7 +30,9 @@
             
         }
         /******************************************************************/
-        
+        #ulcards ul{
+            font-size: 1rem;
+        }
         main  {
             max-width: 960px;
             height: auto;
