--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -210,6 +210,10 @@
   margin-top: 0;
 }
 
+/*directory*/
+#businesses .card > div div img {
+  display: none;
+}
 
 #menu-lg {
   display: none;
@@ -221,10 +225,7 @@
   margin-bottom: 2rem;
 }
 
-#businesses {
-  display: grid;
-  grid-template-columns: 1fr;
-}
+
 }
 
 
