--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -3,7 +3,7 @@
 
 :root {
   /* Colors */
-  --button-color:#FD9D30;
+  --button-color:#FAF55D;
   --black: hsl(0, 0%, 0%);
   --white: hsl(0, 0%, 100%);
   /* Fonts */
@@ -261,6 +261,11 @@
   border-radius: 5px;
   padding: 5px;
 }
+
+#desc{
+  text-transform: capitalize;
+}
+
 .temp{
   display: flex;
   
@@ -291,15 +296,68 @@
 
 }
 
+
 .fa-sun-o{
   color: rgb(255, 60, 0);
 }
+#forecast{
+  grid-row: 1/2;
+  grid-column: 1/4;
+  
 
+  
+}
+.forecast-item {
+  border: 1px solid #0083ca15;
+  text-align: center;
+}
+
+.forecast-item:not(:last-child) {
+  border-right: 0;
+}
+
+.forecast-item h4 {
+  background-color:rgb(15, 67, 115);;
+  padding: 10px;
+  margin: 0;
+  color: #fcfbfb;
+}
+
+.forecast-item img {
+  /* width: 50px; */
+  filter: drop-shadow(0.25em 0.25em 0.5em rgba(0, 0, 0, 0.25));
+}
+
+.forecast-item p {
+  margin-top: 0;
+  font-weight: bold;
+}
+.forecast-item figcaption{
+  text-transform: capitalize;
+}
+.forecast-box{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+
+}
  
+#chamberBanner {
+  display: none;
+  color: #000000;
+  background-color:var(--button-color);
+  padding: 8px;
+  font-size: 1.2rem;
+  text-align: center;
+  
+}
+#closeButton{
+  float: right;
+  cursor: pointer;
+}
  /***********************************************************************/
  .currentevents{
   grid-column: 1/4;
-  grid-row: 1/2;
+  grid-row: 2/3;
   display: grid;
   grid-template-columns: 1fr 6fr 1fr;
   place-items: center;
