--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -148,6 +148,8 @@ s
   display: grid;
   grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
 }
-    
+#forecast{
+  display: block;
+}  
     }
     
