--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -348,6 +348,13 @@
   padding: 8px;
   font-size: 1.2rem;
   text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  
+  width: 100%;
+  
+
   
 }
 #closeButton{
@@ -382,7 +389,7 @@
   border: 3px solid #ccc;
   background: #fff;
   position: relative;
-   z-index: 1;
+   z-index: 0;
 }
 #overflow {
   width: 100%;
