--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -9,6 +9,12 @@
         display: none;
       }
 
+      .top-bar_info_wr{
+        display: flex;
+        align-items:center;
+        justify-content:right;
+      }    
+
       .checkbtn{
         display: block;
         margin-right: 20px;
@@ -16,7 +22,8 @@
 
     #desc , #temp{
       background-color: rgb(13, 67, 115);
-      color: white;
+      color: var(--secondary-color);
+      background-color: var(--primary-color);
       padding: 6px;
     }
 
@@ -29,13 +36,13 @@
         position:fixed;
         width: 100%;
         height: 100vh;
-        color: white;
-        background-color: rgb(13, 67, 115);  
+        color: var(--secondary-color);
+        background-color:var(--primary-color);  
         top: 149px;
         left: -100%;
         text-align: center;    
         transition: all .5s;
-        border-top: 1px solid white;
+        border-top: 1px solid var(--secondary-color);
         z-index: 1;
         
     }
@@ -49,10 +56,10 @@
 
    nav ul li a{
     font-size: 20px;
-    color: white;
+    color: var(--secondary-color);
    }
    nav ul li:hover{
-    background-color: white;
+    background-color: var(--secondary-color);
     color: black;
    }
    nav ul li a:hover{
@@ -89,7 +96,7 @@ s
     }
     .herolabel{
         position: absolute;
-        bottom: 1%;
+        
         left: 10%;
         background: radial-gradient(#ffffff59, #16171800);
        /* border: 1px solid rgba(0,0,0,.75);*/
