--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -164,5 +164,10 @@ s
 #forecast{
   display: block;
 }  
+
+#hbusinesses{
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
     }
     
