--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -651,7 +651,7 @@
 
 
 
-.spotlight-container{
+/*.spotlight-container{
   margin-top: 0rem;
     grid-column: 1/4;
     grid-row: 3/4;
@@ -713,7 +713,7 @@
  .spotlight3 p{
   line-height: 20px;
   margin-bottom: 0.1rem;
- }
+ }*/
 /*/////////////////////////////// ////////////*/
 
  footer{
@@ -1171,17 +1171,18 @@ hr{
 
 /*spotlight form json file*/
 #hbusinesses{
-  grid-column: 1/3;
-  grid-column: 1/4;
-    grid-row: 3/4;
-    display: grid;
-    grid-template-columns: repeat(3, minmax(150px, 1fr));
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    gap: 1rem;
-    color: var(--onlyTextOptions-color);
-    
   
+  grid-column: 1/4;
+  grid-row: 3/4;
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr;
+  margin-bottom: 1rem;
+    margin-top: 1rem;
+    gap: 0.1rem;
+    color: var(--onlyTextOptions-color);
+    margin-left: 12rem;
+    margin-right: 12rem;
+    /*grid-template-columns: repeat(3, minmax(250px, 1fr));*/  
   
 }
 #hbusinesses h3 {
@@ -1193,10 +1194,12 @@ hr{
   line-height: 1.5;
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-weight: bold;
+  
 }
 
+
 #hbusinesses .card {
+  
   
   padding: 1rem;
   border-bottom: 1px  solid rgba(128, 128, 128, 0.295);
@@ -1204,15 +1207,15 @@ hr{
   margin-bottom: 5px;
   margin: 5px;
   border: 1px solid var(--onlyTextOptions-color);
-  
-  
-}
+  }
 
 
 #hbusinesses .card h4 {
   margin-bottom: 1rem;
 }
-
+#hbusinesses .card h5 {
+  margin-bottom: 1rem;
+}
 #hbusinesses .card img {
   max-width: 50%;
   margin-top: 1rem;
